# renderer

./: .gitignore  ARCHITECTURE.md  Cargo.toml  DEVELOPMENT.md  PRODUCTION.md  README.md  docker-compose.metrics.yml  env.example  openapi.yaml  package.json
.github/workflows/: build-ubuntu.yml  ci.yml
docs/: PRODUCTION.md
metrics/: README.md  prometheus.yml
metrics/dashboards/: renderer-overview.json
metrics/grafana/dashboards/: full_dash.json
metrics/grafana/provisioning/dashboards/: dashboard.yml
scripts/: build-template.ts  build-templates.ts  build-utils.ts  catalog-audit.ts  marketplace-sim.ts  render-output.ts
solidity/: RendererApprovals.sol
spec-docs/: ALT_RENDERS.md  ARCHITECTURE.md  DEVELOPMENT.md  PRODUCTION.md  RENDERER_SPEC_v1.2_UPDATED.md
src/: admin.css  admin.js  admin.rs  approvals.rs  assets.rs  cache.rs  canonical.rs  catalog_warmup.rs  chain.rs  config.rs  db.rs  failure_log.rs  fallbacks.rs  http.rs  landing.rs  local_ipfs.rs  main.rs  metrics.rs  pinning.rs  rate_limit.rs  render.rs  render_queue.rs  state.rs  token_warmup.rs  usage.rs  warmup.rs
src/templates/approval/: app.ts  index.html  styles.css
src/templates/landing/: app.ts  index.html  styles.css
